# pick-ur-song-service

./: .gitignore  .pre-commit-config.yaml  docker-compose.yml  pyproject.toml
backend/: Dockerfile  start.sh
backend/app/: main.py
backend/app/api/: dependencies.py  schemas.py
backend/app/api/v1/: api.py
backend/app/broker/: client.py  config.py  publisher.py  schemas.py
backend/app/core/: config.py  email.py  exceptions.py  redis.py  security.py
backend/app/db/: config.py
backend/app/db/models/: __init__.py  base_model.py  timestamp_mixin.py
backend/app/modules/accounts/models/: __init__.py  account.py
backend/app/modules/auth/: router.py  schemas.py  tasks.py
backend/app/modules/auth/models/: __init__.py  refresh_session.py
backend/app/modules/auth/services/: __init__.py  login.py  onboarding.py  refresh.py  register.py  verify.py
backend/app/modules/bars/models/: __init__.py  bar.py  bar_schedule.py  bar_settings.py
backend/app/modules/domains/: router.py  schemas.py  tasks.py
backend/app/modules/domains/models/: __init__.py  player_domain.py
backend/app/modules/domains/services/: __init__.py  domain.py
backend/app/modules/music/: router.py  schemas.py
backend/app/modules/orders/: tasks.py
backend/app/modules/orders/models/: order.py  (+2 more)
backend/app/modules/player/: router.py  schemas.py  tasks.py
backend/app/modules/soundcloud/: router.py  schemas.py
backend/app/modules/venues/: router.py  schemas.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/api/: index.js
frontend/src/composables/: useNotification.js
frontend/src/composables/components/: GlobalAlert.vue
frontend/src/modules/auth/: auth.css  services.js
frontend/src/modules/menu/: services.js
frontend/src/modules/order/: services.js
frontend/src/modules/player/: services.js  websocket.js
frontend/src/router/: index.js
migrations/models/: 0_20260707230802_init.py  0_20260716214305_init.py  1_20260708003646_rename_model_to_base_model.py  1_20260716231538_rename_tracl_playlist_fields.py  2_20260716232112_change_smallint_to_int.py
nginx/conf.d/: default.conf
(+49 files in other folders)
