[project]
name = "pick-ur-song-service"
version = "0.1.0"
description = ""
authors = [
    {name = "ksiki",email = "j.kolyasha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "tortoise-orm[asyncpg] (<1.0.0)",
    "aerich (>=0.9.2,<0.10.0)",
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn[standard] (>=0.50.2,<0.51.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "taskiq[reload] (>=0.12.4,<0.13.0)",
    "taskiq-fastapi (>=0.5.0,<0.6.0)",
    "taskiq-aio-pika (>=0.6.0,<0.7.0)",
    "taskiq-redis (>=1.2.3,<2.0.0)",
    "redis (>=8.0.1,<9.0.0)",
    "websockets (>=16.0,<17.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "sentry-sdk[fastapi] (>=2.64.0,<3.0.0)",
    "uuid6 (>=2025.0.1,<2026.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "faststream[cli] (>=0.7.1,<0.8.0)",
    "aioboto3 (>=15.5.0,<16.0.0)",
    "aiosmtplib (>=5.1.2,<6.0.0)",
    "pwdlib[bcrypt] (>=0.3.0,<0.4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.20"
mypy = "^2.1.0"
pre-commit = "^4.6.0"

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",  # Стандартные ошибки pycodestyle
    "W",  # Предупреждения pycodestyle
    "F",  # Ошибки логики (pyflakes)
    "I",  # Автоматическая сортировка импортов (isort)
    "B",  # Поиск частых багов (flake8-bugbear)
    "UP", # Предложения по обновлению синтаксиса до Python 3.12
    "S",  # Поиск уязвимостей (flake8-bandit) - важно для безопасности!
    "SIM",# Упрощение кода
]
ignore = [
    "B008",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
explicit_package_bases = true
mypy_path = ["backend"]

[tool.aerich]
tortoise_orm = "app.db.config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
